<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:padding="5dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:clipToPadding="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            android:focusable="true">

            <TextView
                android:id="@+id/shiftStartTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/start_date"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/arrow1IV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:srcCompat="@drawable/ic_right_arrow"
                tools:ignore="VectorDrawableCompat"
                android:contentDescription="@string/arrow" />

            <TextView
                android:id="@+id/shiftEndTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/end_date"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:clipToPadding="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">


            <TextView
                android:id="@+id/shiftStartHourTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_time"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/arrow2IV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/arrow"
                app:srcCompat="@drawable/ic_right_arrow"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/shiftEndHourTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_time"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/hoursWorkedTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hours_worked"
            android:textAlignment="center"
            android:textColor="#D50000"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>