<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3D3A3A"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/shiftStartDateLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/shiftStartDateBTN"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_start_date"
                android:textColor="#000000"
                app:backgroundTint="#80D8FF" />

            <TextView
                android:id="@+id/shiftStartDateTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/initial_date_value"
                android:textAlignment="viewEnd"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/startTimeLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/startTimeBTN"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_start_time" />

            <TextView
                android:id="@+id/startTimeTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/initial_time_value"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/shiftEndDateLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/shiftEndDateBTN"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_end_date"
                android:textColor="#000000"
                app:backgroundTint="#80D8FF" />

            <TextView
                android:id="@+id/shiftEndDateTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/initial_date_value"
                android:textAlignment="viewEnd"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/endTimeLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/endTimeBTN"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_end_time" />

            <TextView
                android:id="@+id/endTimeTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/initial_time_value"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelBTN"
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/btn_cancel"
                android:textColor="#000000"
                app:backgroundTint="#FF8A80" />

            <Button
                android:id="@+id/saveBTN"
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/btn_save"
                android:textColor="#000000"
                app:backgroundTint="#77DC00" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>