<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="20dp"
    tools:context=".ui.addjob.AddJobFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rounded_corners"
        android:padding="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#3D3A3A">

            <EditText
                android:id="@+id/companyTV"
                android:layout_width="235dp"
                android:layout_height="42dp"
                android:layout_margin="15dp"
                android:background="@drawable/background_rounded_corners"
                android:hint="@string/placeholder_job_name"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#656565"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />

            <EditText
                android:id="@+id/locationTV"
                android:layout_width="156dp"
                android:layout_height="42dp"
                android:layout_margin="15dp"
                android:background="@drawable/background_rounded_corners"
                android:hint="@string/placeholder_job_location"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHint="#656565"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/companyTV"
                app:layout_constraintVertical_bias="0.204" />

            <Button
                android:id="@+id/addJobBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:text="@string/btn_add_job"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationTV" />

            <Button
                android:id="@+id/saveEditedJobBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:text="@string/btn_edit_job"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>